# experimental

./: .clang-format  CMakeLists.txt  README.md  test_Function.cpp  test_Lifetime.cpp  test_RedirectCout.cpp  test_SmallStorage.cpp
.github/workflows/: ci.yml  static.yml
coverage/: coverage.CMakeCXXCompilerId.cpp.8e95cfb5554c7770e873188ff1492099.html  coverage.Function.hpp.5ae97286a687812156589c31382c3f56.html  coverage.Function.hpp.c8a9e47a26cf60eb7fde2bd758be9078.html  coverage.Lifetime.hpp.2a805655c2ad12ab8a35532fdbe42bf1.html  coverage.Lifetime.hpp.cabc2a9c71df6bbbdc3ad2f3c55e9ebc.html  coverage.RedirectCout.hpp.6ae4972799ac408936d8ca90cfe72bfe.html  coverage.RedirectCout.hpp.df3a3f9ead25f41a228ed400dfeb2479.html  coverage.SmallStorage.hpp.a605059e373b9891c8ecf937fb98a244.html  coverage.SmallStorage.hpp.ba415ac0d65717c99776309deccc08ea.html  coverage.functions.html  coverage.html  coverage.xml
docs/coverage/: coverage.Function.hpp.5ae97286a687812156589c31382c3f56.html  coverage.Lifetime.hpp.cabc2a9c71df6bbbdc3ad2f3c55e9ebc.html  coverage.RedirectCout.hpp.6ae4972799ac408936d8ca90cfe72bfe.html  coverage.SmallStorage.hpp.a605059e373b9891c8ecf937fb98a244.html  coverage.css  coverage.functions.html  coverage.html
include/: Function.hpp  RedirectCout.hpp  SmallStorage.hpp
src/: Function.hpp  Lifetime.hpp  Overloaded.hpp  SmallStorage.hpp  main.cpp
tests/: CMakeLists.txt  test_Function.cpp  test_Overloaded.cpp  test_SmallStorage.cpp
